[metadata]
name = Open Validation over Ansible
summary = A common library for the validations framework
description-file =
    README.rst
author = OpenStack
author-email = mat.bultel@gmail.com
home-page = https://github.com/matbu/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages = ova

[compile_catalog]
directory = ova/locale
domain = ova

[update_catalog]
domain = ova
output_dir = ova/locale
input_file = ova/locale/ova.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ova/locale/validations-libs.pot

[entry_points]
    ova_list = ova.ova_client:ValidationClientList
    ova_show = ova.ova_client:ValidationClientShow
    ova_run = ova.ova_client:ValidationClientRun
    ova_history = ova.ova_client:ValidationClientHistory
